summative.moria.Moria.scala.error
Erreur de compilation :
Moria:2: error: not found: type EST
  setDirection(dir:EST)
                   ^Moria:2: error: not found: value dir
  setDirection(dir:EST)
               ^Moria:15: error: value unary_! is not a member of Unit
  while (!trouverBiscuit()){
         ^